--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,7 @@
 sonar.projectKey=BT_StefanBanzer
+sonar.projectName=codesamples
+sonar.projectVersion=1.0
+
+sonar.sources=codesamples
+
+sonar.host.url=http://localhost:9000
